--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
   </main>
 
   <script src="./assets/js/main.js"></script>
+  <script src="./assets/js/scroll.js"></script>
+  <script src="./assets/js/animation.js"></script>
 </body>
 
 </html>
